Port the /users and /users/{user_id}/prefs endpoints
