# server/handlers/get_user.go
@@ -1,0 +1,21 @@
+package serverhandlers
+
+import (
+	"context"
+
+	"github.com/labstack/echo/v4"
+
+	"github.com/opensvc/oc3/cdb"
+	"github.com/opensvc/oc3/server"
+)
+
+// GetUser handles GET /users/{user_id}
+func (a *Api) GetUser(c echo.Context, userId string, params server.GetUserParams) error {
+	return a.handleItem(c, "GetUser", "user", "user_id", userId, listEndpointParams{
+		props: params.Props, limit: params.Limit, offset: params.Offset,
+		meta: params.Meta, stats: params.Stats, orderby: params.Orderby, groupby: params.Groupby,
+		withUserID: true,
+	}, func(ctx context.Context, p cdb.ListParams) ([]map[string]any, error) {
+		return a.ODB.GetUser(ctx, userId, p)
+	})
+}
