# server/handlers/get_users.go
@@ -1,0 +1,21 @@
+package serverhandlers
+
+import (
+	"context"
+
+	"github.com/labstack/echo/v4"
+
+	"github.com/opensvc/oc3/cdb"
+	"github.com/opensvc/oc3/server"
+)
+
+// GetUsers handles GET /users
+func (a *Api) GetUsers(c echo.Context, params server.GetUsersParams) error {
+	return a.handleList(c, "GetUsers", "user", listEndpointParams{
+		props: params.Props, limit: params.Limit, offset: params.Offset,
+		meta: params.Meta, stats: params.Stats, orderby: params.Orderby, groupby: params.Groupby,
+		withUserID: true,
+	}, func(ctx context.Context, p cdb.ListParams) ([]map[string]any, error) {
+		return a.ODB.GetUsers(ctx, p)
+	})
+}
